tests/metatype/typedesc_as_value.nim
discard """
  errormsg: "invalid type: 'type int' for var"
"""


var x = int

echo x



